# libcal

./: CMakeLists.txt  README.md  build.sh  toolChain.cmake  toolChain_win32.cmake
src/: CMakeLists.txt  cal.cpp  cal.h
