SET(LIB_Z_ENCODE_SRC cal.cpp)
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

IF(UNIX)
MESSAGE(STATUS "on linux")

ADD_LIBRARY(cal SHARED ${LIB_Z_ENCODE_SRC})
SET_TARGET_PROPERTIES(cal PROPERTIES VERSION 1.0 SOVERSION 1)
ADD_LIBRARY(cal_static STATIC ${LIB_Z_ENCODE_SRC})
SET_TARGET_PROPERTIES(cal_static PROPERTIES OUTPUT_NAME "cal")
INSTALL(TARGETS cal cal_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES cal.h DESTINATION include)
ENDIF()

IF(WIN32)
MESSAGE(STATUS "on windows")

ADD_LIBRARY(cal SHARED ${LIB_Z_ENCODE_SRC})
SET_TARGET_PROPERTIES(cal PROPERTIES VERSION 1.0 SOVERSION 1)
ADD_LIBRARY(cal_static STATIC ${LIB_Z_ENCODE_SRC})
SET_TARGET_PROPERTIES(cal_static PROPERTIES OUTPUT_NAME "cal")
INSTALL(TARGETS cal cal_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES cal.h DESTINATION include/cal)
ENDIF()
